--- a/PHASE_1/API_SourceCode/scraper/requirements.txt
+++ b/PHASE_1/API_SourceCode/scraper/requirements.txt
@@ -1,4 +1,39 @@
-Flask==1.1.2
-html_text==0.5.2
+attrs==21.4.0
+Automat==20.2.0
+cffi==1.15.0
+click==8.0.4
+constantly==15.1.0
+cryptography==36.0.1
+cssselect==1.1.0
+Flask==2.0.3
+Flask-Cors==3.0.9
+h2==3.2.0
+hpack==3.0.0
+html-text==0.5.2
+hyperframe==5.2.0
+hyperlink==21.0.0
+idna==3.3
+incremental==21.3.0
 itemadapter==0.4.0
+itemloaders==1.0.4
+itsdangerous==2.1.0
+Jinja2==3.0.3
+jmespath==0.10.0
+lxml==4.8.0
+MarkupSafe==2.1.0
+parsel==1.6.0
+priority==1.3.0
+Protego==0.2.1
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
+pycparser==2.21
+PyDispatcher==2.0.5
+pyOpenSSL==22.0.0
+queuelib==1.6.2
 Scrapy==2.5.1
+service-identity==21.1.0
+Twisted==22.1.0
+typing_extensions==4.1.1
+w3lib==1.22.0
+Werkzeug==2.0.3
+zope.interface==5.4.0
