--- a/PHASE_1/API_SourceCode/package.json
+++ b/PHASE_1/API_SourceCode/package.json
@@ -9,7 +9,7 @@
     "build": "tsc",
     "start": "node dist/index.js",
     "dev": "ts-node-dev --respawn --transpile-only src/index.ts",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest --coverage --verbose"
   },
   "repository": {
     "type": "git",
@@ -26,6 +26,7 @@
     "config": "^3.3.6",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "jest": "^27.5.1",
     "pg": "^8.7.3",
     "reflect-metadata": "^0.1.13",
     "uuid": "^8.3.2",
@@ -36,6 +37,7 @@
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "@types/hapi__joi": "^17.1.7",
+    "@types/jest": "^27.4.0",
     "@types/node": "^16.11.25",
     "@types/uuid": "^8.3.3",
     "@typescript-eslint/eslint-plugin": "^5.9.1",
@@ -46,6 +48,7 @@
     "eslint-plugin-prettier": "^3.1.4",
     "lint-staged": "^10.2.11",
     "prettier": "^2.0.5",
+    "ts-jest": "^27.1.3",
     "ts-node": "^8.10.2",
     "ts-node-dev": "^1.1.8",
     "typescript": "^4.5.4"
