--- a/PHASE_1/API_SourceCode/package.json
+++ b/PHASE_1/API_SourceCode/package.json
@@ -9,7 +9,8 @@
     "build": "tsc",
     "start": "node dist/index.js",
     "dev": "ts-node-dev --respawn --transpile-only src/index.ts",
-    "test": "jest --coverage --verbose"
+    "test": "jest --coverage --verbose",
+    "coverage": "jest --runInBand --detectOpenHandles --coverage --coverageReporters=\"text-summary\""
   },
   "repository": {
     "type": "git",
