IMPL-001 added algorithm to create reports

--- a/PHASE_1/API_SourceCode/scraper/scrapy.cfg
+++ b/PHASE_1/API_SourceCode/scraper/scrapy.cfg
@@ -7,5 +7,7 @@
 default = WHODON_scraper.settings
 
 [deploy]
-#url = http://localhost:6800/
+url = https://scrapy-test-server.herokuapp.com/
+username = admin
+password = scrapydweb
 project = WHODON_scraper
