--- a/PHASE_1/API_SourceCode/package.json
+++ b/PHASE_1/API_SourceCode/package.json
@@ -31,6 +31,7 @@
     "jest": "^27.5.1",
     "pg": "^8.7.3",
     "reflect-metadata": "^0.1.13",
+    "swagger-ui-express": "^4.3.0",
     "typeorm": "^0.2.41",
     "uuid": "^8.3.2",
     "winston": "^3.3.3"
@@ -42,6 +43,7 @@
     "@types/hapi__joi": "^17.1.7",
     "@types/jest": "^27.4.0",
     "@types/node": "^16.11.26",
+    "@types/swagger-ui-express": "^4.1.3",
     "@types/uuid": "^8.3.3",
     "@typescript-eslint/eslint-plugin": "^5.9.1",
     "@typescript-eslint/parser": "^5.9.1",
