--- a/PHASE_1/API_SourceCode/package.json
+++ b/PHASE_1/API_SourceCode/package.json
@@ -10,6 +10,7 @@
     "start": "node dist/index.js",
     "dev": "ts-node-dev --respawn --transpile-only src/index.ts",
     "test": "jest --coverage --verbose",
+    "test:st": "NODE_ENV=test jest --coverage --verbose --runInBand",
     "coverage": "jest --runInBand --detectOpenHandles --coverage --coverageReporters=\"text-summary\""
   },
   "repository": {
@@ -43,6 +44,7 @@
     "@types/hapi__joi": "^17.1.7",
     "@types/jest": "^27.4.0",
     "@types/node": "^16.11.26",
+    "@types/supertest": "^2.0.11",
     "@types/swagger-ui-express": "^4.1.3",
     "@types/uuid": "^8.3.3",
     "@typescript-eslint/eslint-plugin": "^5.9.1",
@@ -53,6 +55,7 @@
     "eslint-plugin-prettier": "^3.1.4",
     "lint-staged": "^10.2.11",
     "prettier": "^2.0.5",
+    "supertest": "^4.0.2",
     "ts-jest": "^27.1.3",
     "ts-node": "^8.10.2",
     "ts-node-dev": "^1.1.8",
