--- a/PHASE_1/API_SourceCode/package.json
+++ b/PHASE_1/API_SourceCode/package.json
@@ -9,7 +9,7 @@
     "build": "tsc",
     "start": "node dist/index.js",
     "dev": "ts-node-dev --respawn --transpile-only src/index.ts",
-    "test": "jest --coverage --verbose",
+    "test": "jest --testPathIgnorePatterns .st.test. --coverage --verbose",
     "test:st": "NODE_ENV=test jest --coverage --verbose --runInBand",
     "coverage": "jest --runInBand --detectOpenHandles --coverage --coverageReporters=\"text-summary\""
   },
