--- a/PHASE_1/API_SourceCode/package.json
+++ b/PHASE_1/API_SourceCode/package.json
@@ -28,6 +28,7 @@
     "config": "^3.3.6",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "got": "^11.8.2",
     "jest": "^27.5.1",
     "pg": "^8.7.3",
     "reflect-metadata": "^0.1.13",
