--- a/PHASE_2/Application_SourceCode/package.json
+++ b/PHASE_2/Application_SourceCode/package.json
@@ -28,12 +28,14 @@
     "@types/react": "^17.0.38",
     "@types/react-dom": "^16.9.10",
     "@types/react-redux": "^7.1.18",
+    "@types/react-simple-maps": "^1.0.8",
     "ky": "^0.28.7",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.5",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
+    "react-simple-maps": "^2.3.0",
     "styled-components": "^5.2.1",
     "typescript": "^4.4.3",
     "uuid": "^8.3.2"
@@ -51,7 +53,6 @@
     "eslint-config-airbnb-typescript": "^12.3.1",
     "eslint-config-prettier": "^7.1.0",
     "jest-styled-components": "^7.0.8",
-    "miragejs": "^0.1.41",
     "prettier": "^2.2.1"
   },
   "eslintConfig": {
