--- a/PHASE_2/Application_SourceCode/package.json
+++ b/PHASE_2/Application_SourceCode/package.json
@@ -22,12 +22,14 @@
     ]
   },
   "dependencies": {
+    "@react-jvectormap/core": "^1.0.1",
     "@reduxjs/toolkit": "^1.6.1",
     "@testing-library/dom": "^7.9.2",
     "@types/node": "^16.11.22",
     "@types/react": "^17.0.38",
     "@types/react-dom": "^16.9.10",
     "@types/react-redux": "^7.1.18",
+    "jquery": "^3.6.0",
     "ky": "^0.28.7",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
