--- a/PHASE_2/Application_SourceCode/package.json
+++ b/PHASE_2/Application_SourceCode/package.json
@@ -39,6 +39,7 @@
     "react-redux": "^7.2.5",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
+    "string-similarity": "^4.0.4",
     "styled-components": "^5.2.1",
     "typescript": "^4.4.3",
     "uuid": "^8.3.2"
@@ -49,6 +50,7 @@
     "@testing-library/user-event": "^12.6.0",
     "@types/jest": "^26.0.20",
     "@types/react-router-dom": "^5.1.7",
+    "@types/string-similarity": "^4.0.0",
     "@types/styled-components": "^5.1.9",
     "@types/uuid": "^8.3.0",
     "@typescript-eslint/eslint-plugin": "^4.22.0",
