--- a/PHASE_2/Application_SourceCode/package.json
+++ b/PHASE_2/Application_SourceCode/package.json
@@ -37,6 +37,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "react-simple-maps": "^2.3.0",
+    "react-icons": "^4.2.0",
     "styled-components": "^5.2.1",
     "typescript": "^4.4.3",
     "uuid": "^8.3.2"
