--- a/PHASE_2/Application_SourceCode/package.json
+++ b/PHASE_2/Application_SourceCode/package.json
@@ -26,6 +26,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.1.1",
     "@fortawesome/react-fontawesome": "^0.1.18",
     "@react-jvectormap/core": "^1.0.1",
+    "@react-jvectormap/world": "^1.1.0",
     "@reduxjs/toolkit": "^1.6.1",
     "@testing-library/dom": "^7.9.2",
     "@types/node": "^16.11.22",
@@ -33,17 +34,17 @@
     "@types/react-dom": "^16.9.10",
     "@types/react-redux": "^7.1.18",
     "@types/react-simple-maps": "^1.0.8",
-    "js-sha256": "^0.9.0",
     "jquery": "^3.6.0",
+    "js-sha256": "^0.9.0",
     "ky": "^0.28.7",
     "react": "^17.0.2",
     "react-collapsible": "^2.8.4",
     "react-dom": "^17.0.2",
+    "react-icons": "^4.2.0",
     "react-redux": "^7.2.5",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "react-simple-maps": "^2.3.0",
-    "react-icons": "^4.2.0",
     "string-similarity": "^4.0.4",
     "styled-components": "^5.2.1",
     "typescript": "^4.4.3",
