--- a/PHASE_2/Application_SourceCode/package.json
+++ b/PHASE_2/Application_SourceCode/package.json
@@ -45,6 +45,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "react-simple-maps": "^2.3.0",
+    "react-star-ratings": "^2.3.0",
     "string-similarity": "^4.0.4",
     "styled-components": "^5.2.1",
     "typescript": "^4.4.3",
@@ -56,6 +57,7 @@
     "@testing-library/user-event": "^12.6.0",
     "@types/jest": "^26.0.20",
     "@types/react-router-dom": "^5.1.7",
+    "@types/react-star-ratings": "^2.3.0",
     "@types/string-similarity": "^4.0.0",
     "@types/styled-components": "^5.1.9",
     "@types/uuid": "^8.3.0",
