--- a/PHASE_1/API_SourceCode/package.json
+++ b/PHASE_1/API_SourceCode/package.json
@@ -30,6 +30,7 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "got": "^11.8.2",
+    "heroku": "^7.60.1",
     "jest": "^27.5.1",
     "jsonwebtoken": "^8.5.1",
     "node-fetch": "^2.6.1",
