--- a/PHASE_2/Application_SourceCode/package.json
+++ b/PHASE_2/Application_SourceCode/package.json
@@ -41,6 +41,7 @@
     "react-collapsible": "^2.8.4",
     "react-dom": "^17.0.2",
     "react-icons": "^4.2.0",
+    "react-native-collapsible": "^1.6.0",
     "react-redux": "^7.2.5",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
